# OmicsOracle

./: .bandit  .env.development  .env.example  .env.production  .env.production.template  .env.staging  .flake8  .gitignore  .pre-commit-config.yaml  ADVANCED_CLEANUP_ANALYSIS.md  ARCHITECTURE.md  ASCII_ENFORCEMENT_IMPLEMENTATION_SUMMARY.md  BACKEND_REFACTORING_PLAN.md  CACHING_AND_RESULT_STORAGE_ANALYSIS.md  CODEBASE_CLEANUP_COMPLETE.md  CODEBASE_CLEANUP_COMPLETION_REPORT.md  CODEBASE_CLEANUP_PLAN.md  COMPREHENSIVE_TESTING_MONITORING_SUMMARY.md  CORE_PHILOSOPHY.md  DATA_INTEGRITY_FINDINGS.md  DEVELOPMENT_PLAN.md  DEVELOPMENT_PLAN_QUALITY_UPDATE.md  DEVELOPMENT_PLAN_UPDATE_SUMMARY.md  DEVELOPMENT_PROGRESS_ANALYSIS.md  DOCUMENTATION_CONSOLIDATION_PLAN.md  Dockerfile  Dockerfile.production  EXECUTIVE_SUMMARY_INTERFACES.md  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_SUCCESS_SUMMARY.md  FUTURISTIC_INTERFACE_COMPLETE.md  FUTURISTIC_INTERFACE_DEVELOPMENT_PLAN.md  FUTURISTIC_INTERFACE_IMPLEMENTATION_PLAN.md  FUTURISTIC_INTERFACE_INTEGRATION_SUMMARY.md  GSE278726_DATA_INTEGRITY_REPORT.md  GSE278726_VALIDATION_REPORT.md  IMMEDIATE_ACTION_PLAN.md  IMPLEMENTATION_PROGRESS.md  INTERFACES_DETAILED_GUIDE.md  INTERFACE_CLEANUP_PLAN.md  (+182 more)
analytics_data/: query_history.json
config/: development.yml  nginx.conf  nginx.ssl.conf  production.yml  prometheus.yml  testing.yml
docs/: ADVANCED_SEARCH_FEATURES.md  API_REFERENCE.md  ARCHITECTURAL_ANALYSIS.md  ARCHITECTURE_IMPROVEMENT_PLAN.md  ASCII_ENFORCEMENT_GUIDE.md  CLEANUP_SUMMARY.md  CODEBASE_CLEANUP_ANALYSIS.md  CODE_QUALITY_GUIDE.md  COMPREHENSIVE_ARCHITECTURE_EVALUATION_SUMMARY.md  COMPREHENSIVE_EVENT_FLOW_IMPLEMENTATION.md  CRITICAL_ARCHITECTURE_EVALUATION.md  DEPLOYMENT_GUIDE.md  DEVELOPER_GUIDE.md  EVENT_FLOW_CHART.md  EVENT_FLOW_GAP_ANALYSIS.md  EVENT_FLOW_README.md  EVENT_FLOW_VALIDATION_MAP.md  INDEX.md  INTERFACE_ANALYSIS_REPORT.md  INTERFACE_ARCHITECTURE_ASSESSMENT.md  README.md  SEARCH_SYSTEM_CASE_STUDY.md  SEARCH_SYSTEM_TECHNICAL_DOCUMENTATION.md  STARTUP_GUIDE.md  SYSTEM_ARCHITECTURE.md  TESTING_HIERARCHY.md  TEST_TEMPLATES.md  WEB_INTERFACE_DEMO_GUIDE.md  architecture_quality_report.json  comprehensive_event_flow_validation.dot  event_flow_validation.dot  refactoring_implementation_guide.py
error_analysis/: README.md
extracted_docs/: Data System Architecture Overview_extracted.txt  Naming Suggestions for a GEO Metadata Summarization Tool_extracted.txt  Tools and Libraries for GEO Metadata Access_extracted.txt
integrity_reports/: integrity_single_GSE278726_20250626_161014.json
interfaces/: README.md
performance_reports/: README.md  search_performance_20250627_145501.json
pipeline_reports/: 20250626_115701_report.json  20250626_115701_timeline.json
query_traces/: trace_20250627_135112_report.md  trace_20250627_135758_report.md  trace_20250627_140200_report.md  trace_20250627_140215_report.md  trace_20250627_140215_trace.json  trace_20250627_140253_report.md
scripts/: README.md  ascii_enforcer.py  comprehensive_test_suite.py  consolidate_interfaces.sh  demo_biomedical_nlp.py  deploy.sh  fix_ascii_violations.py  fix_unused_imports.py  improve_code_quality.py  monitor.sh  pre_push_check.sh  quick_ci_check.py  read_pdfs.py  run_validation_suite.py  setup-mvp.sh  setup_ssl.sh  start_futuristic_enhanced.sh  start_web_server.py  test_pipeline.py  validate_deployment.sh  validate_integrations.py  validation_report.json  web_interface_test_summary.py  workflow_monitor.py
src/: __init__.py
test-results/: load_test_report.html  query_001_result.json
test_reports/: enhanced_query_validation.md  event_coverage_report.json  test_advanced_filters_results.xml  test_ai_summarization_results.xml  test_all_interfaces_results.xml  test_api_endpoints_results.xml  test_architecture_results.xml  test_biomedical_nlp_results.xml  test_cache_disabling_results.xml  test_cli_ai_integration_results.xml  test_complete_search_journey_results.xml  test_comprehensive_web_interface_results.xml  test_core_results.xml  test_core_simple_results.xml  test_dashboard_integration_results.xml  test_enhancements_results.xml  test_entrez_patch_results.xml  test_environment_results.xml  test_error_handling_results.xml  test_execution_report.json  test_geo_client_integration_results.xml  test_geo_client_results.xml  test_honest_results_results.xml  test_integration_results.xml  test_integrations_results.xml  test_llm_integration_results.xml  test_nlp_results.xml  (+27 more)
(+761 files in other folders)
